fix sidebar overflow

--- a/src/scss/component/sidebar.scss
+++ b/src/scss/component/sidebar.scss
@@ -43,7 +43,7 @@
 .sidebar.active { transform: translate3d(0px, 0px, 0px); }
 
 .sidebar {
-	.inner { width: 100%; height: 100%; display: flex; flex-direction: column; }
+	.inner { width: 100%; height: 100%; display: flex; flex-direction: column; overflow: hidden; }
 	.inner {
 		> .head { display: flex; flex-direction: row; align-items: center; justify-content: flex-end; padding: 0px 16px 0px 0px; height: 12px; cursor: grab; }
 		> .head {
